--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
 .grid-item {
   / Styles for individual grid items /
-  list-style : none
-  padding: 20px;
+  list-style none
+  padding  20px;
   border: 1px solid aquamarine;
  
 }
